--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -361,6 +361,8 @@
   <string name="color_theme_test_text">Sample descriptive text giving the user instructions on using the text size slider.</string>
   <string name="preference_title_app_theme">Title for a preference allowing the user to change the color theme of the app</string>
   <string name="preference_summary_color_theme">Description for a preference allowing the user to turn on the dark theme</string>
+  <string name="preference_title_use_tor">Title for a preference allowing the user to enable routing traffic through Orbot</string>
+  <string name="preference_summary_use_tor">Description for a preference allowing the user to enable routing traffic through Orbot</string>
   <string name="text_size_increase">Button hint for increasing the text size used in articles.</string>
   <string name="text_size_decrease">Button hint for decreasing the text size used in articles.</string>
   <string name="text_size_percent_default">Label indicating that the current text size is the default size. The %s symbol is replaced with the percentage of the size.</string>
